# graph6-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
resources/: formats.txt
src/: conversion.rs  directed.rs  error.rs  lib.rs  undirected.rs  utils.rs  write.rs
